Changes 5.8.7 -> 5.8.8:
* Build: Fix building sndlib
* Editor: Fix mark instruments as being assigned to an editor
  track.
* Editor: Fix crash when deleting an instrument assigned
  to an editor track


Changes 5.8.6 -> 5.8.7:
* Editor: Only show used instruments in the bottom part of the
  popup menu to select instrument for a track. Also added a sub
  menu containing all instruments.
* Menus: Add "Show/Hide Edit" to the Windows menu.
* Build: Make sure sndlib is rebuilt when it's been updated.
* Build: Fix building sndlib.
* OSX: Trying to fix obtaining diagnostic reports file for the 
  crash/assertion reporter.
* API: instrumentHasBeenUsed


Changes 5.8.4 -> 5.8.6:
* Blocklist: Add various assertions and logging in order to fix
  a crash bug happening when selecting previous block (reported
  via crash reporter).
* OSX: Try to avoid an extra assertion report that has popped up
  recently when program crashes.
* Sequencer: Add "Delete all pauses" entry to the popup menu
* Playlist: Add option to delete all pauses
* Instrument/Mixer: Fix wrong default chance value when changing
  to a different A/B (default value was 1 instead of 256).
* Editor: Fix wrong pan value when pasting sound objects. Bug
  introduced in 5.8.4
* Audio: Began speed automation, but it"s not working yet, and GUI
  has been disabled.
* Audio: Fix memory leak in granulation.
* Audio: Fix cluttered CPU usage in granulation and resampling.
* Sequencer: Reorganized seqblock popup menu a bit.
* Audio: Handle appropriately when samplerate ratio is too low or
  too high for libsamplerate.
* Sndlib: Fix so that increasing jitter doesn't increase sound length
  when stretching audiofile in the sequencer.
* Packages: Update sndlib to latest version.
* Qt: Fix Qt error message about shared opengl context when building
  with Qt 5.9.
* Audio: Increased maximum number of CPUs from 16 to 64
* Instrument widget: Don't update patch widget name for a name that