@@ -88,8 +88,8 @@ MakeFocusSnifferClass(QLineEdit);
 #  pragma GCC diagnostic push
 #  pragma GCC diagnostic ignored "-Wsuggest-override"
 #endif
-#include <Qsci/qscilexer.h>
-#include <Qsci/qsciscintilla.h>  // <--- Much trouble. Any qt4 alternatives?
+#include "../bin/packages/QScintilla_gpl-2.10.1/Qt4Qt5/Qsci/qscilexer.h"
+#include "../bin/packages/QScintilla_gpl-2.10.1/Qt4Qt5/Qsci/qsciscintilla.h"  // <--- Much trouble. Any qt4 alternatives?
 #if __GNUC__ >= 5
 #  pragma GCC diagnostic pop
 #endif
